force-app/main/default/objects/Krow__Vendor_Line_Item__c/Krow__Vendor_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Vendor Line Item</label>
    <nameField>
        <displayFormat>VLI-{0000}</displayFormat>
        <label>Vendor Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>