force-app/main/default/objects/Krow__Vendor_Line_Item__c/fields/Krow__Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Cost_Amount__c</fullName>
    <formula>Krow__Cost_Rate__c * Krow__Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>