force-app/main/default/objects/Krow__Vendor_Line_Item__c/fields/Krow__Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Date__c</fullName>
    <description>Date For This vendor line item</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>