force-app/main/default/objects/Krow__Vendor_Line_Item__c/fields/Krow__Product_from_Split__c.field-meta.xml
<CustomField>
    <fullName>Krow__Product_from_Split__c</fullName>
    <description>it loads productid of billing type from split&apos;s project</description>
    <formula>Krow__Timesheet_Split__r.Krow__Krow_Project__r.Krow__Billing_Type__r.Krow__Default_Product__c</formula>
    <inlineHelpText>it loads productid of billing type from split&apos;s project</inlineHelpText>
    <label>Product from Split</label>
    <type>Text</type>
</CustomField>