force-app/main/default/objects/Krow__Vendor_Line_Item__c/fields/Krow__Timesheet_Notes__c.field-meta.xml
<CustomField>
    <fullName>Krow__Timesheet_Notes__c</fullName>
    <label>Timesheet Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>