force-app/main/default/objects/Krow__Vendor_Line_Item__c/fields/Krow__Timesheet_Split__c.field-meta.xml
<CustomField>
    <fullName>Krow__Timesheet_Split__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet Split</label>
    <referenceTo>Krow__Timesheet_Split__c</referenceTo>
    <relationshipLabel>Vendor Line Items</relationshipLabel>
    <relationshipName>Vendor_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>